# FishClaw

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/cookbook/: manager_item_agent.py  post_item_agent.py
src/models/: config.py
src/tests/: test_browse_tools_direct.py  test_draft_item.py  test_generate_image.py  test_get_page_content.py  test_get_selling_items.py  test_login.py  test_login_direct.py  test_manage_item.py  test_post_item_direct.py  test_prompt.py  test_publish_item.py  test_search_market.py  test_simulate_farming.py
src/tools/: __init__.py  generate_image_tools.py  prompt_tools.py  xianyu_tools.py
tests/: test_generate_image.py  test_login_direct.py  test_post_item_direct.py  test_xianyu_agent.py
