[project]
name = "fishclaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno==2.5.5",
    "crawl4ai>=0.8.0",
    "loguru>=0.7.3",
    "mcp>=1.26.0",
    "openai>=2.24.0",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "pyautogui>=0.9.54",
    "python-dotenv>=1.0.0",
    "qrcode>=8.2",
    "sqlalchemy>=2.0.48",
]
